--- a/css/jquery-pagedesigner.css
+++ b/css/jquery-pagedesigner.css
@@ -12,6 +12,16 @@ html, body {
 	font-size: .9em;
 }
 
+#about-panel a, #about-panel a:visited {
+	color: #676767;
+	font-weight: bold;
+}
+
+#about-panel a:hover {
+	color: #FFF;
+	text-shadow: 1px 1px #000, -1px -1px #000, 4px 4px #F00, 8px 8px #0F0, 12px 12px #00F;
+}
+
 #menu {
 	background-color: #EEE;
 	border-bottom: 1px solid #808080;
@@ -107,7 +117,7 @@ html, body {
 #design-area {
 	width: 1px;
 	position: relative;
-	margin: 26px auto;
+	margin: 40px auto;
 	float: right;
 	-webkit-user-select: none;
 	-khtml-user-select: none;
@@ -199,4 +209,14 @@ input[type="radio"], input[type="checkbox"] {
 	border-top: 1px solid #DDD;
 	padding-top: 10px;
 	margin-bottom: 10px;
+}
+
+.panel-field-label {
+	text-align: right;
+	padding-right: 5px;
+}
+
+.panel-px-input {
+	width: 30px;
+	text-align: right;
 }
