--- a/css/meldbox.css
+++ b/css/meldbox.css
@@ -19,7 +19,7 @@ html, body {
 
 #about-panel a:hover {
 	color: #FFF;
-	text-shadow: 1px 1px #000, -1px -1px #000, 4px 4px #F00, 8px 8px #0F0, 12px 12px #00F;
+	text-shadow: 1px 1px #000, -1px -1px #000, 5px 5px rgba(255, 0, 0, 0.4), 10px 10px rgba(0, 255, 0, 0.4), 15px 15px rgba(0, 0, 255, 0.4);
 }
 
 #menu {
@@ -140,11 +140,9 @@ html, body {
 #design-canvas {
 	background: #FFF;
 	position: absolute;
-	top: 30px;
 	left: -1030px;
 	width: 1024px;
 	height: 1400px;
-	border: 1px solid #DDD;
 	overflow: hidden;
 }
 	
