--- a/css/jquery.contextMenu.css
+++ b/css/jquery.contextMenu.css
@@ -17,7 +17,7 @@
     padding:0;
     
     min-width: 120px;
-    max-width: 250px;
+    width: 260px;
     display: inline-block;
     position: absolute;
     list-style-type: none;
