--- a/css/meldbox.css
+++ b/css/meldbox.css
@@ -1,3 +1,36 @@
+/*
+
+Meldbox
+Version: 1.6
+
+Author:
+	Shawn Welch <shawn@meldbox.net>
+	
+Web:
+	https://github.com/shrimpwagon/meldbox
+	http://meldbox.net
+		
+License:
+	GPL v3 http://www.gnu.org/licenses/gpl.html
+
+Meldbox is an open source, in-browser web page and app designer for developers
+Copyright (C) 2013 by Shawn Welch <shawn@meldbox.net>
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+*/
+
 * {
 	margin: 0;
 	padding: 0;
@@ -19,7 +52,6 @@ html, body {
 
 #about-panel a:hover {
 	color: #FFF;
-	text-shadow: 1px 1px #000, -1px -1px #000, 5px 5px rgba(255, 0, 0, 0.4), 10px 10px rgba(0, 255, 0, 0.4), 15px 15px rgba(0, 0, 255, 0.4);
 }
 
 #menu {
